[Styling] Fixed issue with select inputs getting cut off for pipeline step tool configuration panels

--- a/src/css/pipelines/workflows.css
+++ b/src/css/pipelines/workflows.css
@@ -172,7 +172,6 @@
 
 .step-settings-container {
   min-height: calc(100% - 65px);
-  overflow: auto;
 }
 
 .step-settings-body {
